--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srcset",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Parse and stringify the HTML <img> srcset attribute",
   "keywords": [
     "html",
@@ -11,35 +11,23 @@
     "parse",
     "stringify"
   ],
-  "homepage": "https://github.com/sindresorhus/srcset",
-  "bugs": "https://github.com/sindresorhus/srcset/issues",
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
     "url": "http://sindresorhus.com"
   },
   "main": "srcset",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/sindresorhus/srcset.git"
-  },
+  "repository": "sindresorhus/srcset",
   "scripts": {
-    "test": "mocha && phantomjs node_modules/mocha-phantomjs/lib/mocha-phantomjs.coffee test/test.html"
+    "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "~1.12.0",
-    "chai": "~1.7.2",
-    "phantomjs": "~1.9.0",
-    "mocha-phantomjs": "~3.1.1"
+    "mocha": "*"
   },
   "engines": {
     "node": ">=0.8.0"
   },
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ],
+  "license": "MIT",
   "files": [
     "srcset.js"
   ]
